--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "browsersync": "0.0.1-security",
+    "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
   }
 }
