--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
   },
